apollo-router/tests/snapshots/apollo_reports__condition_if.snap
---
source: apollo-router/tests/apollo_reports.rs
expression: report
---
header:
  graph_ref: test
  hostname: "[hostname]"
  agent_version: "[agent_version]"
  service_version: ""
  runtime_version: rust
  uname: "[uname]"
  executable_schema_id: "[executable_schema_id]"
traces_per_query:
  "# -\nquery($if:Boolean!){topProducts{name...@defer(if:$if,label:\"\"){reviews{author{name}}reviews{author{name}}}}}":
    trace:
      - start_time:
          seconds: "[seconds]"
          nanos: "[nanos]"
        end_time:
          seconds: "[seconds]"
          nanos: "[nanos]"
        duration_ns: "[duration_ns]"
        root: ~
        is_incomplete: false
        signature: ""
        unexecuted_operation_body: ""
        unexecuted_operation_name: ""
        details:
          variables_json:
            if: ""
          operation_name: ""
        client_name: ""
        client_version: ""
        operation_type: ""
        operation_subtype: ""
        http:
          method: 4
          request_headers: {}
          response_headers:
            my_trace_id: "[my_trace_id]"
          status_code: 0
        cache_policy: ~
        query_plan: ~
        full_query_cache_hit: false
        persisted_query_hit: false
        persisted_query_register: false
        registered_operation: false
        forbidden_operation: false
        field_execution_weight: 1
    stats_with_context: []
    referenced_fields_by_type: {}
    internal_traces_contributing_to_stats: []
end_time: "[end_time]"
operation_count: 0
operation_count_by_type: []
traces_pre_aggregated: true

